NLP TP's/texts/robotics/robotics.stackexchange_0000098971.txt
Q:

approximate time example: ros::Subscriber’ has no member named ‘registerCallback’

I compile approximate time example then get this error what should I do?
In file included from /opt/ros/melodic/include/message_filters/sync_policies/approximate_time.h:38:0,
                 from /home/ardi/aerobone_ws/src/time_sub_handler/src/time_node.cpp:13:
/opt/ros/melodic/include/message_filters/synchronizer.h: In instantiation of ‘void message_filters::Synchronizer<Policy>::connectInput(F0&, F1&, F2&, F3&, F4&, F5&, F6&, F7&, F8&) [with F0 = ros::Subscriber; F1 = ros::Subscriber; F2 = message_filters::NullFilter<message_filters::NullType>; F3 = message_filters::NullFilter<message_filters::NullType>; F4 = message_filters::NullFilter<message_filters::NullType>; F5 = message_filters::NullFilter<message_filters::NullType>; F6 = message_filters::NullFilter<message_filters::NullType>; F7 = message_filters::NullFilter<message_filters::NullType>; F8 = message_filters::NullFilter<message_filters::NullType>; Policy = message_filters::sync_policies::ApproximateTime<serial_handler::chemsensor_<std::allocator<void> >, sensor_msgs::NavSatFix_<std::allocator<void> > >]’:
/opt/ros/melodic/include/message_filters/synchronizer.h:254:18:   required from ‘void message_filters::Synchronizer<Policy>::connectInput(F0&, F1&, F2&, F3&, F4&, F5&, F6&, F7&) [with F0 = ros::Subscriber; F1 = ros::Subscriber; F2 = message_filters::NullFilter<message_filters::NullType>; F3 = message_filters::NullFilter<message_filters::NullType>; F4 = message_filters::NullFilter<message_filters::NullType>; F5 = message_filters::NullFilter<message_filters::NullType>; F6 = message_filters::NullFilter<message_filters::NullType>; F7 = message_filters::NullFilter<message_filters::NullType>; Policy = message_filters::sync_policies::ApproximateTime<serial_handler::chemsensor_<std::allocator<void> >, sensor_msgs::NavSatFix_<std::allocator<void> > >]’
/opt/ros/melodic/include/message_filters/synchronizer.h:295:18:   required from ‘void message_filters::Synchronizer<Policy>::connectInput(F0&, F1&, F2&, F3&, F4&, F5&, F6&) [with F0 = ros::Subscriber; F1 = ros::Subscriber; F2 = message_filters::NullFilter<message_filters::NullType>; F3 = message_filters::NullFilter<message_filters::NullType>; F4 = message_filters::NullFilter<message_filters::NullType>; F5 = message_filters::NullFilter<message_filters::NullType>; F6 = message_filters::NullFilter<message_filters::NullType>; Policy = message_filters::sync_policies::ApproximateTime<serial_handler::chemsensor_<std::allocator<void> >, sensor_msgs::NavSatFix_<std::allocator<void> > >]’
/opt/ros/melodic/include/message_filters/synchronizer.h:288:18:   required from ‘void message_filters::Synchronizer<Policy>::connectInput(F0&, F1&, F2&, F3&, F4&, F5&) [with F0 = ros::Subscriber; F1 = ros::Subscriber; F2 = message_filters::NullFilter<message_filters::NullType>; F3 = message_filters::NullFilter<message_filters::NullType>; F4 = message_filters::NullFilter<message_filters::NullType>; F5 = message_filters::NullFilter<message_filters::NullType>; Policy = message_filters::sync_policies::ApproximateTime<serial_handler::chemsensor_<std::allocator<void> >, sensor_msgs::NavSatFix_<std::allocator<void> > >]’
/opt/ros/melodic/include/message_filters/synchronizer.h:281:18:   required from ‘void message_filters::Synchronizer<Policy>::connectInput(F0&, F1&, F2&, F3&, F4&) [with F0 = ros::Subscriber; F1 = ros::Subscriber; F2 = message_filters::NullFilter<message_filters::NullType>; F3 = message_filters::NullFilter<message_filters::NullType>; F4 = message_filters::NullFilter<message_filters::NullType>; Policy = message_filters::sync_policies::ApproximateTime<serial_handler::chemsensor_<std::allocator<void> >, sensor_msgs::NavSatFix_<std::allocator<void> > >]’
/opt/ros/melodic/include/message_filters/synchronizer.h:274:18:   required from ‘void message_filters::Synchronizer<Policy>::connectInput(F0&, F1&, F2&, F3&) [with F0 = ros::Subscriber; F1 = ros::Subscriber; F2 = message_filters::NullFilter<message_filters::NullType>; F3 = message_filters::NullFilter<message_filters::NullType>; Policy = message_filters::sync_policies::ApproximateTime<serial_handler::chemsensor_<std::allocator<void> >, sensor_msgs::NavSatFix_<std::allocator<void> > >]’
/opt/ros/melodic/include/message_filters/synchronizer.h:267:18:   required from ‘void message_filters::Synchronizer<Policy>::connectInput(F0&, F1&, F2&) [with F0 = ros::Subscriber; F1 = ros::Subscriber; F2 = message_filters::NullFilter<message_filters::NullType>; Policy = message_filters::sync_policies::ApproximateTime<serial_handler::chemsensor_<std::allocator<void> >, sensor_msgs::NavSatFix_<std::allocator<void> > >]’
/opt/ros/melodic/include/message_filters/synchronizer.h:260:18:   required from ‘void message_filters::Synchronizer<Policy>::connectInput(F0&, F1&) [with F0 = ros::Subscriber; F1 = ros::Subscriber; Policy = message_filters::sync_policies::ApproximateTime<serial_handler::chemsensor_<std::allocator<void> >, sensor_msgs::NavSatFix_<std::allocator<void> > >]’
/opt/ros/melodic/include/message_filters/synchronizer.h:160:18:   required from ‘message_filters::Synchronizer<Policy>::Synchronizer(const Policy&, F0&, F1&) [with F0 = ros::Subscriber; F1 = ros::Subscriber; Policy = message_filters::sync_policies::ApproximateTime<serial_handler::chemsensor_<std::allocator<void> >, sensor_msgs::NavSatFix_<std::allocator<void> > >]’
/home/ardi/aerobone_ws/src/time_sub_handler/src/time_node.cpp:100:63:   required from here
/opt/ros/melodic/include/message_filters/synchronizer.h:240:33: error: ‘class ros::Subscriber’ has no member named ‘registerCallback’
      input_connections_[0] = f0.registerCallback(boost::function<void(const M0Event&)>(boost::bind(&Synchronizer::template cb<0>, this, _1)));
                              ~~~^~~~~~~~~~~~~~~~
In file included from /opt/ros/melodic/include/message_filters/sync_policies/approximate_time.h:38:0,
                 from /home/ardi/aerobone_ws/src/time_sub_handler/src/time_node.cpp:13:
/opt/ros/melodic/include/message_filters/synchronizer.h:241:33: error: ‘class ros::Subscriber’ has no member named ‘registerCallback’
      input_connections_[1] = f1.registerCallback(boost::function<void(const M1Event&)>(boost::bind(&Synchronizer::template cb<1>, this, _1)));
                              ~~~^~~~~~~~~~~~~~~~
time_sub_handler/CMakeFiles/time_subs.dir/build.make:62: recipe for target 'time_sub_handler/CMakeFiles/time_subs.dir/src/time_node.cpp.o' failed
make[2]: *** [time_sub_handler/CMakeFiles/time_subs.dir/src/time_node.cpp.o] Error 1
CMakeFiles/Makefile2:2785: recipe for target 'time_sub_handler/CMakeFiles/time_subs.dir/all' failed
make[1]: *** [time_sub_handler/CMakeFiles/time_subs.dir/all] Error 2
Makefile:140: recipe for target 'all' failed

Originally posted by anonymous73997 on ROS Answers with karma: 16 on 2021-05-02
Post score: 0

Original comments
Comment by abhishek47 on 2021-05-02:
"what should I do?" — to begin with, you could format your question correctly using the 101010 button
Comment by gvdhoorn on 2021-05-03:\

"what should I do?" — to begin with, you could format your question correctly using the 101010 button

@abhishek47kashyap: there doesn't seem to be a need to get snarky immediately here.
It seems this is @ard17's first post: could we please try to help new users instead?
Comment by abhishek47 on 2021-05-03:
Sorry @ard17, I realize my comment could be more constructive! @gvdhoorn, will do better :)

A:

Its solved, i use wrong subscriber

Originally posted by anonymous73997 with karma: 16 on 2021-05-03
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by gvdhoorn on 2021-05-03:
Thanks for reporting your solution @ard17.
Could you please:

not delete questions which have an actual answer?
expand your description of your solution a bit? What was it that you actually had to change? What did you have before (ie: when you couldn't compile your node) and what do you have now?

Being clear about how you solved your problem will help future readers avoid the same problem and is much appreciated.
Thanks.

